<resources>
    <string name="app_name">Hanoicomputer</string>
    <string name="error_place_holder">Error Happend.Try again!</string>
    <integer name="activity_anim_duration">300</integer>
    <integer name="activity_anim_duration_out">300</integer>

    <!--Login Dialog-->
    <string name="login_title">Đăng nhập</string>
    <string name="register_title">Chưa có tài khoản? <font fgcolor='#FFFF3B30'>Đăng ký</font></string> <!--red-->
    <string name="login_desc">Bạn cần đăng nhập để sử dụng được tính năng này</string>
    <string name="confirm_order_title">Bạn chắc chắn muốn đặt đơn hàng này?</string>

    <!--bottom navigation-->
    <string name="menu_home">Trang chủ</string>
    <string name="menu_category">Danh mục</string>
    <string name="menu_my_account">Account</string>

    <!--HncSearchView-->
    <string name="hint_search">Search</string>

    <!--Home page-->
    <string name="home_brand_title">Thương hiệu</string>
    <string name="home_see_all_title">Xem tất cả</string>

    <!--Category page-->
    <string name="category_header_title">Danh mục</string>

    <!--Account page-->
    <string name="account_information_title">Thông tin tài khoản</string>
    <string name="account_order_information_title">Đơn hàng của tôi</string>
    <string name="change_password_title">Đổi mật khẩu</string>
    <string name="no_result">Không có sản phẩm</string>
    <string name="count_order_title">Thống kê đơn</string>
    <string name="password_title">Mật khẩu</string>
    <string name="re_password_title">Nhập lại mật khẩu</string>
    <string name="account_already_buy_information_title">Sản phẩm đã mua</string>
    <string name="full_name_title">Họ và tên</string>
    <string name="birthday_title">Ngày sinh</string>
    <string name="gender_title">Giới tính</string>
    <string name="address_title">Địa chỉ nhà</string>
    <string name="phone_number_title">Số điện thoại</string>
    <string name="already_have_account">Đã có tài khoản? <font fgcolor='#FFFF3B30'>Đăng nhập</font></string>
    <string name="email_title">Email</string>

    <!--Cart page-->
    <string name="cart_header_title">Giỏ hàng</string>

    <!--Brand page-->
    <string name="brand_header_title">Thương hiệu</string>

    <!--Order detail page-->
    <string name="order_detail_header_title">Chi tiết đơn hàng</string>

    <string-array name="gender">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>

    <string-array name="price">
        <item>1 Trieu</item>
        <item>2 Trieu</item>
    </string-array>

    <string-array name="dien_tich">
        <item>15 m2</item>
        <item>30 m2</item>
    </string-array>
</resources>